# jita

./: default.nix  index.html  pyproject.toml  recorder.js  result
jita/: app.py  db.py  test.py
jita/fingerprinter/: config.py  decoder.py  fingerprint.py  recognize.py
jita/scrapers/: ug.py  youtube.py
jita/scripts/: scrape.py
